Permite separação de Depositantes por natureza de depositante no principais depositeantes. Número de Documentos está inteiro nos principais depositantes. Espaço corrigido nas páginas de principais depositantes e inventores. Criada a página de Perfil tecnológico por inventores. Campo vazio não aparece mais em Distribuição por estado.

--- a/periscope-web/src/main/webapp/style/bootstrap.css
+++ b/periscope-web/src/main/webapp/style/bootstrap.css
@@ -197,7 +197,7 @@ a:hover {
 .container,
 .navbar-fixed-top .container,
 .navbar-fixed-bottom .container {
-  width: 940px;
+  width: 100%;
 }
 
 .span12 {
@@ -723,7 +723,7 @@ pre code {
 }
 
 form {
-  margin: 0 0 18px;
+  margin: 0 0 0px;
 }
 
 fieldset {
