--- a/periscope-web/src/main/webapp/template/sidebar.xhtml
+++ b/periscope-web/src/main/webapp/template/sidebar.xhtml
@@ -41,13 +41,20 @@
                                         icon="ui-icon-refresh" ajax="false" />
 
 
-                            <p:menuitem value="#{msgs['technological.profile']}" action="mainTechnologicalProfile" icon="ui-icon-refresh" ajax="false" />
+                            <p:menuitem value="#{msgs['technological.profile.applicant']}" action="mainTechnologicalProfile"
+                                        icon="ui-icon-refresh" ajax="false" />
+                            
+                            <p:menuitem value="#{msgs['technological.profile.inventor']}" action="technologicalProfileByInventor"
+                                        icon="ui-icon-refresh" ajax="false" />
 
-                            <p:menuitem value="#{msgs['natureDepositor']}" action="natureApplicant" icon="ui-icon-refresh" ajax="false" />
+                            <p:menuitem value="#{msgs['natureDepositor']}" action="natureApplicant" 
+                                        icon="ui-icon-refresh" ajax="false" />
 
-                            <p:menuitem value="#{msgs['stateDistribuition']}" action="stateDistribuition" icon="ui-icon-refresh" ajax="false" />
+                            <p:menuitem value="#{msgs['stateDistribuition']}" action="stateDistribuition"
+                                        icon="ui-icon-refresh" ajax="false" />
 
-                            <p:menuitem value="#{msgs['regionDistribuition']}" action="regionDistribuition" icon="ui-icon-refresh" ajax="false" />
+                            <p:menuitem value="#{msgs['regionDistribuition']}" action="regionDistribuition"
+                                        icon="ui-icon-refresh" ajax="false" />
 
 
                         </p:submenu>
