--- a/periscope-web/src/main/webapp/template/footer.xhtml
+++ b/periscope-web/src/main/webapp/template/footer.xhtml
@@ -1,16 +1,15 @@
 <?xml version='1.0' encoding='utf-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:p="http://primefaces.org/ui">
-<f:view contentType="text/html">
-	<h:form>
-
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
+    <f:view contentType="text/html">
+        <div style="margin-left: 20px;">
             <h:outputText value="#{msgs['developed.by']}"/>
-		<br />
-                <h:outputText value="#{msgs['build.value']}" style="color: #999999; font-style: italic"/>
-	</h:form>
-</f:view>
+            <br />
+            <h:outputText value="#{msgs['build.value']}" style="color: #999999; font-style: italic"/>
+        </div>
+    </f:view>
 </html>
