--- a/periscope-web/src/main/webapp/components/filtro.xhtml
+++ b/periscope-web/src/main/webapp/components/filtro.xhtml
@@ -10,25 +10,20 @@
 
         <c:if test='#{empty rendSpinner}' ><c:set var="rendSpinner" value="true"/> </c:if>
 
-        <center>    
+      
 
+
+
+
+
+        <h:outputScript library="js" name="locales.js"></h:outputScript>
+
+        <h:panelGrid columns="2" cellpadding="5" id="filtroId">
+            <label>#{msgs['item.number']}:</label>
             <p:spinner value="#{controller.limit}" maxlength="3" min="5" max="20"
                        style="padding:0 20px 0 0" rendered="#{rendSpinner}">
                 <p:ajax listener="#{controller.refreshChart()}" update="@form"  />
             </p:spinner>
-        </center>
-
-
-
-        <p:selectBooleanCheckbox id="complete" itemLabel="#{msgs['completo']}"
-                                 value="#{controller.filtro.complete}">
-            <p:ajax update="tudo" 
-                    listener="#{controller.refreshChart()}" />
-        </p:selectBooleanCheckbox>
-
-        <h:outputScript library="js" name="locales.js"></h:outputScript>
-
-        <h:panelGrid columns="2" cellpadding="5" id="filtroId">  
             <h:outputText value="#{msgs['period.interest']}:"/> 
             <p:selectOneMenu value="#{controller.filtro.selecionaData}" id="selDate"  valueChangeListener="#{controller.selectListener}">
                 <f:selectItem itemLabel="#{msgs['publication.date']}" itemValue="1" /> 
@@ -43,10 +38,17 @@
             <h:outputText value="#{msgs['to']}:" />
             <p:calendar value="#{controller.filtro.fim}" id="to" maxlength="10" mindate="#{controller.minDate}" maxdate="#{controller.maxDate}" locale="#{msgs['calendar']}" showButtonPanel="true" navigator="true" pattern="#{msgs['date.pattern']}">
             </p:calendar>
+            <p:selectBooleanCheckbox id="complete" itemLabel="#{msgs['completo']}"
+                                     value="#{controller.filtro.complete}">
+                <p:ajax update=":#{p:component('tudo')}" 
+                        listener="#{controller.refreshChart()}" />
+            </p:selectBooleanCheckbox>
+            <br/>
 
-            <p:commandButton action="#{controller.refreshChart()}" update="tudo" value="#{msgs['update']}"></p:commandButton>
+            <p:commandButton action="#{controller.refreshChart()}" update=":#{p:component('tudo')}" value="#{msgs['update']}"></p:commandButton>
             <br/>
         </h:panelGrid>
+
     </ui:composition>
 </html>
 
