Adicionando Build Automático

--- a/periscope-web/src/main/webapp/template/footer.xhtml
+++ b/periscope-web/src/main/webapp/template/footer.xhtml
@@ -9,7 +9,7 @@
         <div style="margin-left: 20px;">
             <h:outputText value="#{msgs['developed.by']}"/>
             <br />
-            <h:outputText value="#{msgs['build.value']}" style="color: #999999; font-style: italic"/>
+            <h:outputText value="Build: #{versionNumber}" style="color: #999999; font-style: italic"/>
         </div>
     </f:view>
 </html>
