--- a/periscope-web/src/main/webapp/style/bootstrap.css
+++ b/periscope-web/src/main/webapp/style/bootstrap.css
@@ -2789,19 +2789,19 @@ button.close {
 }
 
 .btn-warning {
-    background-color: #faa732;
-    *background-color: #f89406;
-    background-image: -ms-linear-gradient(top, #fbb450, #f89406);
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#fbb450), to(#f89406));
-    background-image: -webkit-linear-gradient(top, #fbb450, #f89406);
-    background-image: -o-linear-gradient(top, #fbb450, #f89406);
-    background-image: -moz-linear-gradient(top, #fbb450, #f89406);
-    background-image: linear-gradient(top, #fbb450, #f89406);
-    background-repeat: repeat-x;
-    border-color: #f89406 #f89406 #ad6704;
-    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#fbb450', endColorstr='#f89406', GradientType=0);
-    filter: progid:dximagetransform.microsoft.gradient(enabled=false);
+    background-color: #faa732 !important;
+    *background-color: #f89406 !important;
+    background-image: -ms-linear-gradient(top, #fbb450, #f89406) !important;
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#fbb450), to(#f89406)) !important;
+    background-image: -webkit-linear-gradient(top, #fbb450, #f89406) !important;
+    background-image: -o-linear-gradient(top, #fbb450, #f89406) !important;
+    background-image: -moz-linear-gradient(top, #fbb450, #f89406) !important;
+    background-image: linear-gradient(top, #fbb450, #f89406) !important;
+    background-repeat: repeat-x !important;
+    border-color: #f89406 #f89406 #ad6704 !important;
+    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25) !important;
+    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#fbb450', endColorstr='#f89406', GradientType=0) !important;
+    filter: progid:dximagetransform.microsoft.gradient(enabled=false) !important;
 }
 
 .btn-warning:hover,
@@ -2819,19 +2819,21 @@ button.close {
 }
 
 .btn-danger {
-    background-color: #da4f49;
-    *background-color: #bd362f;
-    background-image: -ms-linear-gradient(top, #ee5f5b, #bd362f);
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ee5f5b), to(#bd362f));
-    background-image: -webkit-linear-gradient(top, #ee5f5b, #bd362f);
-    background-image: -o-linear-gradient(top, #ee5f5b, #bd362f);
-    background-image: -moz-linear-gradient(top, #ee5f5b, #bd362f);
-    background-image: linear-gradient(top, #ee5f5b, #bd362f);
-    background-repeat: repeat-x;
-    border-color: #bd362f #bd362f #802420;
-    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ee5f5b', endColorstr='#bd362f', GradientType=0);
-    filter: progid:dximagetransform.microsoft.gradient(enabled=false);
+    background-color: #da4f49 !important;
+    *background-color: #bd362f !important;
+    color: #ffffff !important;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25) !important;
+    background-image: -ms-linear-gradient(top, #ee5f5b, #bd362f) !important;
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ee5f5b), to(#bd362f)) !important;
+    background-image: -webkit-linear-gradient(top, #ee5f5b, #bd362f) !important;
+    background-image: -o-linear-gradient(top, #ee5f5b, #bd362f) !important;
+    background-image: -moz-linear-gradient(top, #ee5f5b, #bd362f) !important;
+    background-image: linear-gradient(top, #ee5f5b, #bd362f) !important;
+    background-repeat: repeat-x !important;
+    border-color: #bd362f #bd362f #802420 !important;
+    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25) !important;
+    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ee5f5b', endColorstr='#bd362f', GradientType=0) !important;
+    filter: progid:dximagetransform.microsoft.gradient(enabled=false) !important;
 }
 
 .btn-danger:hover,
@@ -2849,19 +2851,21 @@ button.close {
 }
 
 .btn-success {
-    background-color: #5bb75b;
-    *background-color: #51a351;
-    background-image: -ms-linear-gradient(top, #62c462, #51a351);
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#62c462), to(#51a351));
-    background-image: -webkit-linear-gradient(top, #62c462, #51a351);
-    background-image: -o-linear-gradient(top, #62c462, #51a351);
-    background-image: -moz-linear-gradient(top, #62c462, #51a351);
-    background-image: linear-gradient(top, #62c462, #51a351);
-    background-repeat: repeat-x;
-    border-color: #51a351 #51a351 #387038;
-    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#62c462', endColorstr='#51a351', GradientType=0);
-    filter: progid:dximagetransform.microsoft.gradient(enabled=false);
+    background-color: #5bb75b !important;
+    *background-color: #51a351 !important;
+    color: #ffffff !important;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25) !important;
+    background-image: -ms-linear-gradient(top, #62c462, #51a351) !important;
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#62c462), to(#51a351)) !important;
+    background-image: -webkit-linear-gradient(top, #62c462, #51a351) !important;
+    background-image: -o-linear-gradient(top, #62c462, #51a351) !important;
+    background-image: -moz-linear-gradient(top, #62c462, #51a351) !important;
+    background-image: linear-gradient(top, #62c462, #51a351) !important;
+    background-repeat: repeat-x !important;
+    border-color: #51a351 #51a351 #387038 !important;
+    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25) !important;
+    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#62c462', endColorstr='#51a351', GradientType=0) !important;
+    filter: progid:dximagetransform.microsoft.gradient(enabled=false) !important;
 }
 
 .btn-success:hover,
@@ -2879,19 +2883,21 @@ button.close {
 }
 
 .btn-info {
-    background-color: #49afcd;
-    *background-color: #2f96b4;
-    background-image: -ms-linear-gradient(top, #5bc0de, #2f96b4);
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#5bc0de), to(#2f96b4));
-    background-image: -webkit-linear-gradient(top, #5bc0de, #2f96b4);
-    background-image: -o-linear-gradient(top, #5bc0de, #2f96b4);
-    background-image: -moz-linear-gradient(top, #5bc0de, #2f96b4);
-    background-image: linear-gradient(top, #5bc0de, #2f96b4);
-    background-repeat: repeat-x;
-    border-color: #2f96b4 #2f96b4 #1f6377;
-    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#5bc0de', endColorstr='#2f96b4', GradientType=0);
-    filter: progid:dximagetransform.microsoft.gradient(enabled=false);
+    background-color: #49afcd !important;
+    *background-color: #2f96b4 !important;
+    color: #ffffff !important;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25) !important;
+    background-image: -ms-linear-gradient(top, #5bc0de, #2f96b4) !important;
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#5bc0de), to(#2f96b4)) !important;
+    background-image: -webkit-linear-gradient(top, #5bc0de, #2f96b4) !important;
+    background-image: -o-linear-gradient(top, #5bc0de, #2f96b4) !important;
+    background-image: -moz-linear-gradient(top, #5bc0de, #2f96b4) !important;
+    background-image: linear-gradient(top, #5bc0de, #2f96b4) !important;
+    background-repeat: repeat-x !important;
+    border-color: #2f96b4 #2f96b4 #1f6377 !important;
+    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25) !important;
+    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#5bc0de', endColorstr='#2f96b4', GradientType=0) !important;
+    filter: progid:dximagetransform.microsoft.gradient(enabled=false) !important;
 }
 
 .btn-info:hover,
@@ -2909,19 +2915,21 @@ button.close {
 }
 
 .btn-inverse {
-    background-color: #414141;
-    *background-color: #222222;
-    background-image: -ms-linear-gradient(top, #555555, #222222);
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#555555), to(#222222));
-    background-image: -webkit-linear-gradient(top, #555555, #222222);
-    background-image: -o-linear-gradient(top, #555555, #222222);
-    background-image: -moz-linear-gradient(top, #555555, #222222);
-    background-image: linear-gradient(top, #555555, #222222);
-    background-repeat: repeat-x;
-    border-color: #222222 #222222 #000000;
-    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#555555', endColorstr='#222222', GradientType=0);
-    filter: progid:dximagetransform.microsoft.gradient(enabled=false);
+    background-color: #414141 !important;
+    *background-color: #222222 !important;
+    color: #ffffff !important;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25) !important;
+    background-image: -ms-linear-gradient(top, #555555, #222222) !important;
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#555555), to(#222222)) !important;
+    background-image: -webkit-linear-gradient(top, #555555, #222222) !important;
+    background-image: -o-linear-gradient(top, #555555, #222222) !important;
+    background-image: -moz-linear-gradient(top, #555555, #222222) !important;
+    background-image: linear-gradient(top, #555555, #222222) !important;
+    background-repeat: repeat-x !important;
+    border-color: #222222 #222222 #000000 !important;
+    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25) !important;
+    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#555555', endColorstr='#222222', GradientType=0) !important;
+    filter: progid:dximagetransform.microsoft.gradient(enabled=false) !important;
 }
 
 .btn-inverse:hover,
